# booksaver-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.specsmd/: manifest.yaml
aidlc-docs/: README.md
aidlc-docs/design-artifacts/: unit-01-core-local-data.md  unit-02-booking-com-monitor.md  unit-03-savings-and-notify.md  unit-04-guided-rebook.md  unit-05-extensibility-future.md
aidlc-docs/plans/: project-setup-scaffold.md  units_plan.md  user_stories_plan.md
aidlc-docs/requirements/: mvp-scope.md
aidlc-docs/story-artifacts/: user-stories-mvp.md
memory-bank/: project.yaml  story-index.md
memory-bank/bolts/001-core-local-data/: adr-001-sqlite-local-persistence.md  adr-002-toml-env-config.md  adr-003-python-311-stdlib-first.md  adr-004-hexagonal-protocol-ports.md  bolt.md  ddd-01-domain-model.md  ddd-02-technical-design.md  ddd-03-test-report.md
memory-bank/bolts/002-core-local-data/: adr-005-foreground-daemon.md  adr-006-threading-event-scheduler.md  bolt.md  ddd-01-domain-model.md  ddd-02-technical-design.md
memory-bank/intents/001-booksaver-agent-mvp/: requirements.md  system-context.md  units.md
memory-bank/standards/: coding-standards.md  decision-index.md  system-architecture.md  tech-stack.md
src/booksaver/application/: load_config.py  ports.py  register_booking.py
src/booksaver/cli/: __main__.py  commands.py
src/booksaver_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: test_config.py  test_persistence.py
tests/unit/: test_services.py  test_value_objects.py
(+35 files in other folders)
