[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "booksaver-agent"
version = "0.1.0"
description = "Local daemon that monitors Booking.com hotel prices for refundable reservations"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "mypy"]

[project.scripts]
booksaver = "booksaver.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
